Removed no wrap and added a fixed width to <code>
Code looks better un-wrapped on mobile!

--- a/css/blog.css
+++ b/css/blog.css
@@ -17,5 +17,6 @@ footer {
 }
 
 code {
-    white-space: nowrap;
+    display: block; 
+    width: 892px;
 }
